[gd_scene load_steps=13 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://themes/buttons.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ExitButton.gd" type="Script" id=4]

[sub_resource type="BitmapFont" id=5]

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.266667, 1, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.431373, 0.47451, 0.709804, 1 )
shadow_size = 2
shadow_offset = Vector2( 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.266667, 0.32549, 0.639216, 1 )
shadow_size = 2
shadow_offset = Vector2( 0.6, 0 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "Flying
Batman"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 92.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = ExtResource( 2 )
shortcut = SubResource( 4 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -101.0
margin_right = 92.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
shortcut = SubResource( 4 )
text = "Exit"
script = ExtResource( 4 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="ExitButton" to="." method="_on_StartButton_pressed"]
